feat: enhance browser automation and stealth capabilities
- Add browser cookie configuration support
- Refactor browser configuration into separate utility modules
- Enhance extraction service with improved headers and cookie handling
- Add stealth scripts for better bot detection avoidance
- Add Reddit-specific optimizations for better content extraction

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,18 @@ REBROWSER_PATCHES_SOURCE_URL=jquery.min.js
 REBROWSER_PATCHES_UTILITY_WORLD_NAME=util
 # Enable debug messages
 REBROWSER_PATCHES_DEBUG=0
+
+# Browser Cookies Configuration
+# Path to JSON file containing exported cookies (required for authenticated sites)
+# Format: Array of cookie objects with properties:
+# {
+#   name: string,
+#   value: string,
+#   domain: string (e.g., ".reddit.com"),
+#   path: string (usually "/"),
+#   expires: number (timestamp),
+#   httpOnly: boolean,
+#   secure: boolean,
+#   sameSite: "Strict" | "Lax" | "None"
+# }
+BROWSER_COOKIES_PATH=
