docs: add logging configuration documentation
- Add logging environment variables to MCP configuration example
- Add dedicated logging configuration section
- Document LOG_LEVEL, NO_COLOR, and color force options

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,12 @@ EXTRACT_TIMEOUT=30000
 PRESERVE_LINKS=true
 FORMAT_CODE=true
 
+# Logging Configuration
+LOG_LEVEL=info # Options: error, warn, info, debug
+NO_COLOR=0 # Set to 1 to disable colored output
+BUN_FORCE_COLOR=1 # Set to 0 to disable colored output in Bun
+FORCE_COLOR=1 # Set to 0 to disable colored output globally
+
 # Rebrowser Patches Configuration
 # Options: addBinding, alwaysIsolated, enableDisable, 0
 REBROWSER_PATCHES_RUNTIME_FIX_MODE=addBinding
