refactor: consolidate screenshot functionality and add cookie persistence
- Integrate screenshot service into extraction service for better code organization
- Add cookie persistence feature to browser pool for session management
- Remove standalone screenshot service and related MCP tool
- Update types to use base64 encoding for screenshot data
- Add ENABLE_COOKIE_PERSISTENCE environment variable
- Improve type safety with BrowserInstance interface
- Fix line endings in .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ MAX_CACHE_ITEMS=1000
 BROWSER_POOL_MIN=1
 BROWSER_POOL_MAX=5
 BROWSER_POOL_IDLE_TIMEOUT=30000
+ENABLE_COOKIE_PERSISTENCE=false # Set to true to enable cookie persistence between sessions
 
 # Screenshot Defaults
 DEFAULT_VIEWPORT_WIDTH=1280
