--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "@types/node-cache": "4.1.3",
     "@types/turndown": "5.0.5",
     "@types/sharp": "0.31.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "8.23.0",
+    "@typescript-eslint/parser": "8.23.0",
     "bun-types": "^1.0.25",
-    "eslint": "^8.56.0",
+    "eslint": "9.19.0",
     "eslint-plugin-import": "^2.29.1"
   }
 }
